ACTUALIZACION AÑADIDO DE COOKIE - BACKEND AHORA SI v2